[gd_scene load_steps=8 format=3 uid="uid://dc01qmly3uoig"]

[ext_resource type="Script" uid="uid://crpkhgtvqgdn7" path="res://scripts/slimes/slime_water.gd" id="1_fmaks"]
[ext_resource type="PackedScene" uid="uid://chx4skxp7tgbu" path="res://assets/Art/3d/Slime/Slime.tscn" id="2_bc6p0"]
[ext_resource type="PackedScene" uid="uid://dctf57s33kdcy" path="res://scenes/slimes/alerted_indicator.tscn" id="3_bc6p0"]
[ext_resource type="PackedScene" uid="uid://dk3mqxfsapt2s" path="res://scenes/slimes/nudgeable_indicator.tscn" id="4_twey5"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6nu0y"]
resource_local_to_scene = true
radius = 0.63

[sub_resource type="SphereShape3D" id="SphereShape3D_22mvs"]
radius = 13.0

[sub_resource type="SphereShape3D" id="SphereShape3D_fmaks"]
resource_local_to_scene = true
radius = 1.0

[node name="SlimeWater" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_fmaks")
push_magnitude = 0.001
update_push_cooldown = 10.0
slime_type = 1
split_type = 2

[node name="CollisionShape" type="CollisionShape3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0746541, 0.495757, 0.16989)
shape = SubResource("SphereShape3D_6nu0y")
debug_color = Color(0.787219, 0.410982, 0.360379, 0.42)

[node name="Pivot" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="SlimeModel" parent="Pivot" instance=ExtResource("2_bc6p0")]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="FlockingZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 2

[node name="FlockingZoneCollisionShape" type="CollisionShape3D" parent="FlockingZone"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_22mvs")

[node name="UpdateAmbientDirectionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="UpdatePushTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="TouchZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
collision_layer = 0
collision_mask = 2

[node name="TouchCollisionShape3D" type="CollisionShape3D" parent="TouchZone"]
unique_name_in_owner = true
shape = SubResource("SphereShape3D_fmaks")

[node name="AlertedIndicator" parent="." instance=ExtResource("3_bc6p0")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75984, 0)

[node name="NudgeableIndicator" parent="." instance=ExtResource("4_twey5")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75984, 0)

[connection signal="body_entered" from="FlockingZone" to="." method="_on_flocking_zone_body_entered"]
[connection signal="body_exited" from="FlockingZone" to="." method="_on_flocking_zone_body_exited"]
[connection signal="timeout" from="UpdateAmbientDirectionTimer" to="." method="_on_update_ambient_direction_timer_timeout"]
[connection signal="timeout" from="UpdatePushTimer" to="." method="_on_update_push_timer_timeout"]
[connection signal="body_entered" from="TouchZone" to="." method="_on_touch_zone_body_entered"]
